# releng

./: .gitreview  Containerfile  README.md  list-pending-updates.sh  requirements.txt  setup.cfg  sync_fedora_distgit.sh  tox.ini
container/: README.md  extra-packages
container/etc/: gitconfig
container/etc/profile.d/: rdo-profile.sh
rdorelease/: db.py  rdo_release_review.py  utils.py
rdoutils/: cbs_utils.py  generate_ftbfs_dashboard_feed.py  jenkins_utils.py  rdoinfo.py  releases_utils.py  resources_utils.py  review_utils.py
rdoutils/cmd/: build_jenkins_job.py  check_dependants.py  get_jenkins_job.py  new_releases.py  rdo_projects.py  reviews_rdo_project.py  update_uc.py
scripts/: abandon_old_reviews.sh  create-release.sh  list_contributors.sh  pin_non_os_puppet_modules.sh  report-uc.py  upgrade_spec.sh
scripts/fedora_sync/: README  check_fedora_sync.sh  list_openstack_packages.sh  sync_fedora_from_rdo.sh  update_changelog.py
scripts/new_release_scripts/: branch_projects.sh  common.rc  create_build_snap.sh  cross_tag  edit_source_gpg_sign  pin-non_os-puppet.sh  pin_tempest_plugins.sh  send_new_version.sh  send_non_os_puppet_module_new_version.sh  update-tag.py
