[metadata]
name = releng
author = Alfredo Moralejo
author-email = amoralej@redhat.com
summary = Some utilities to work in RDO
description-file = README.md
home-page = https://github.com/rdo-infra/releng
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: RDOers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: Linux
    Programming Language :: Python
keywords =
    rdo
[files]
packages =
    rdoutils
    rdorelease
[entry_points]
console_scripts =
    reviews_rdo_project = rdoutils.cmd.reviews_rdo_project:main
    rdo_projects = rdoutils.cmd.rdo_projects:main
    new_releases = rdoutils.cmd.new_releases:main
    rdo_release_review = rdorelease.rdo_release_review:main
    get_jenkins_job = rdoutils.cmd.get_jenkins_job:main
    build_jenkins_job = rdoutils.cmd.build_jenkins_job:main
    update_uc = rdoutils.cmd.update_uc:update_uc
    check_dependants = rdoutils.cmd.check_dependants:main
    rdo_list_ftbfs = rdoutils.generate_ftbfs_dashboard_feed:main
